fixed header alignement

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,7 +17,7 @@ body > header {
 	font-size: 16px;
 	vertical-align: top;
 	margin-bottom: 20px;
-  margin-left: 40px;
+  margin-left: 100px;
 }
 
 #content {
